mount home to container for ssh authorized_keys

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,7 @@ services:
     image: defn/dev
     ports:
       - 2222:2222
+    volumes:
+      - ./home:/mnt/home
     entrypoint:
       - /home/ubuntu/etc/service
