dev: mount docker socket

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,5 +3,7 @@
   "remoteUser": "ubuntu",
   "mounts": [
     "source=${localEnv:HOME}/.password-store,target=/home/ubuntu/.password-store,type=bind,consistency=cached"
-  ]
+  ],
+  "runArgs": ["-v", "/var/run/docker.sock:/var/run/docker.sock"],
+  "postStartCommand": "sudo chgrp ubuntu /var/run/docker.sock"
 }
