--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,5 @@
     "source=${localEnv:HOME}/.kube,target=/home/ubuntu/.kube,type=bind,consistency=cached"
   ],
   "runArgs": ["-v", "/var/run/docker.sock:/var/run/docker.sock"],
-  "postStartCommand": "sudo chgrp ubuntu /var/run/docker.sock; sudo chown 0770 /var/run/docker.sock; cd; pre-commit run --all"
+  "postStartCommand": "sudo chgrp ubuntu /var/run/docker.sock; sudo chmod 0770 /var/run/docker.sock; cd; pre-commit run --all"
 }
