--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v4.1.0
     hooks:
       - id: trailing-whitespace
+      - id: end-of-file-fixer
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.5.1
