--- a/etc/immanent.yaml
+++ b/etc/immanent.yaml
@@ -30,8 +30,8 @@ options:
         nodeFilters:
           - "server:0"
   kubeconfig:
-    updateDefaultKubeconfig: true
-    switchCurrentContext: true
+    updateDefaultKubeconfig: false
+    switchCurrentContext: false
 ports:
   - port: 80:30080
     nodeFilters:
