--- a/etc/roke.yaml
+++ b/etc/roke.yaml
@@ -30,5 +30,5 @@ options:
         nodeFilters:
           - "server:0"
   kubeconfig:
-    updateDefaultKubeconfig: false
+    updateDefaultKubeconfig: true
     switchCurrentContext: false
