mount docker socket

--- a/etc/defn.yaml
+++ b/etc/defn.yaml
@@ -27,3 +27,11 @@ spec:
     - name: defn
       image: defn/dev
       tty: true
+      volumeMounts:
+        - mountPath: /var/run/docker.sock
+          name: docker-sock
+
+  volumes:
+    - name: docker-sock
+      hostPath:
+        path: /var/run/docker.sock
