--- a/etc/roke.yaml
+++ b/etc/roke.yaml
@@ -13,6 +13,10 @@ hostAliases:
   - ip: 100.101.28.35
     hostnames:
       - this
+volumes:
+  - volume: /var/run/docker.sock:/var/run/docker.sock
+    nodeFilters:
+      - server:0
 options:
   k3d:
     wait: true
