--- a/etc/immanent.yaml
+++ b/etc/immanent.yaml
@@ -13,6 +13,16 @@ hostAliases:
   - ip: 100.101.28.35
     hostnames:
       - this
+volumes:
+  - volume: /var/run/docker.sock:/var/run/docker.sock
+    nodeFilters:
+      - server:0
+  - volume: k3d-password-store:/mnt/password-store
+    nodeFilters:
+      - server:0
+  - volume: k3d-work:/mnt/work
+    nodeFilters:
+      - server:0
 options:
   k3d:
     wait: true
@@ -32,6 +42,8 @@ options:
   kubeconfig:
     updateDefaultKubeconfig: true
     switchCurrentContext: false
+registries:
+  use: ["k3d-registry.localhost:5555"]
 ports:
   - port: 80:30080
     nodeFilters:
