--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
   "remoteUser": "ubuntu",
   "mounts": [
     "source=${localEnv:HOME}/.password-store,target=/home/ubuntu/.password-store,type=bind,consistency=delegated",
-    "source=${localEnv:HOME}/.kube,target=/home/ubuntu/.kube,type=bind,consistency=delegated"
+    "source=${localEnv:HOME}/.kube,target=/home/ubuntu/.kube,type=bind,consistency=delegated",
+    "source=${localEnv:HOME}/work,target=/workspaces,type=bind,consistency=delegated"
   ],
   "runArgs": ["-v", "/var/run/docker.sock:/var/run/docker.sock"],
   "postStartCommand": "/home/ubuntu/etc/hook-start"
