--- a/Makefile.site
+++ b/Makefile.site
@@ -3,3 +3,6 @@ build:
 
 asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
+
+test:
+	cirrus run --container-lazy-pull --output simple
