--- a/Makefile.site
+++ b/Makefile.site
@@ -1,5 +1,5 @@
 tower:
-	pre-commmit run -a
+	pre-commit run -a
 	dotenv run docker build -f Dockerfile.tower -t defn/dev:tower --build-arg IMAGE=defn/dev:base $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
 
 base:
