need the real directory to run tests with mounts

--- a/Makefile.site
+++ b/Makefile.site
@@ -9,4 +9,4 @@ asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
 
 test:
-	cirrus run --container-lazy-pull --output simple
+	cd "$(shell pwd -P)" && cirrus run --container-lazy-pull --output simple
