--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,5 +5,6 @@ lint_task:
     set -exfu
     sudo chown -R ubuntu:ubuntu /tmp/cirrus-ci/working-dir
     git config --global --add safe.directory /tmp/cirrus-ci/working-dir
+    git checkout -- .dockerignore
     ./bin/e pre-commit run -a
     git diff
