--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,10 +1,14 @@
-lint_task:
+precommit_task:
   container:
-    image: defn/dev:tower
+    image: defn/dev:ci
+  meh_cache:
+    folder: meh
   script: |
     set -efu
     sudo chown -R ubuntu:ubuntu /tmp/cirrus-ci/working-dir
     git config --global --add safe.directory /tmp/cirrus-ci/working-dir
     git checkout -- .dockerignore
     ./bin/e pre-commit run -a
-    ps axuf
+    mkdir -p meh
+    touch meh/meh-$(date +%s)
+    find meh -ls
