add github action

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,15 +1,7 @@
+container:
+  image: defn/dev:ci
+
 precommit_task:
-  container:
-    image: defn/dev:ci
-  meh_cache:
-    folder: meh
   script: |
-    set -efu
-    chown -R ubuntu:ubuntu /tmp/cirrus-ci/working-dir
-    git config --global --add safe.directory /tmp/cirrus-ci/working-dir
-    sudo -E -u ubuntu ./ci/precommit.sh
-nothing_task:
-  container:
-    image: defn/dev:ci
-  script: |
-    true
+    chown -R ubuntu:ubuntu "${CIRRUS_WORKING_DIR}"
+    sudo -E -u ubuntu ~ubuntu/bin/e ./ci/precommit.sh
