--- a/.github/workflows/cirrus.yml
+++ b/.github/workflows/cirrus.yml
@@ -2,9 +2,9 @@ name: Run Cirrus Tasks
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   cirrus:
