--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,6 +2,8 @@ container:
   image: defn/dev:ci
 
 precommit_task:
+  meh_cache:
+    folder: meh
   script: |
     chown -R ubuntu:ubuntu "${CIRRUS_WORKING_DIR}"
     sudo -E -u ubuntu ~ubuntu/bin/e ./ci/precommit.sh
