let tilt build docker images

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -66,4 +66,5 @@ RUN echo yes | vim +PlugInstall +qall
 RUN mkdir -p ~/.docker && echo '{"credsStore": "pass"}' > ~/.docker/config.json
 
 COPY --chown=ubuntu:ubuntu . .
-RUN git remote rm origin && git remote add origin https://github.com/defn/dev && git fetch && git branch -u origin/main
+RUN git remote rm origin || true && git remote add origin https://github.com/defn/dev
+RUN git fetch && git checkout -f main && git branch -u origin/main && git reset --hard
