entrypoint that does nothing, forever

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -68,3 +68,5 @@ RUN mkdir -p ~/.docker && echo '{"credsStore": "pass"}' > ~/.docker/config.json
 COPY --chown=ubuntu:ubuntu . .
 RUN git remote rm origin || true && git remote add origin https://github.com/defn/dev
 RUN git fetch && git checkout -f main && git branch -u origin/main && git reset --hard
+
+ENTRYPOINT ["tail", "-f", "/dev/null"]
