--- a/Dockerfile.tower
+++ b/Dockerfile.tower
@@ -88,6 +88,6 @@ RUN python3.9 -m pipx install pantsbuild.pants
 
 COPY --chown=ubuntu:ubuntu . .
 
-RUN if test -d .git; then git clean -ffd; git remote rm origin || true && git remote add origin https://github.com/defn/dev; fi
+RUN find .git -ls
 
 RUN ./bin/e /home/ubuntu/.local/bin/pre-commit run --all
