--- a/Dockerfile.tower
+++ b/Dockerfile.tower
@@ -60,6 +60,10 @@ ARG GH
 RUN cd /usr/local/bin && curl -sSL https://github.com/cli/cli/releases/download/v${GH}/gh_${GH}_linux_amd64.tar.gz \
     | sudo tar xvfz - --wildcards '*/bin/gh' && sudo mv */bin/gh . && sudo rm -rf gh_*
 
+ARG GORELEASER
+RUN cd /usr/local/bin && curl -sSL https://github.com/goreleaser/goreleaser/releases/download/v${GORELEASER}/goreleaser_Linux_x86_64.tar.gz \
+    | sudo tar xvfz - goreleaser
+
 ARG ASDF
 COPY --chown=ubuntu:ubuntu .tool-versions .
 RUN git clone https://github.com/asdf-vm/asdf.git ~/.asdf --branch v${ASDF}
