--- a/Dockerfile.tower
+++ b/Dockerfile.tower
@@ -21,6 +21,7 @@ RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf plugin-add golang'
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf plugin-add teleport-ent'
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf plugin-add vault'
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf plugin-add consul'
+RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf plugin-add cloudflared'
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf install'
 
 RUN git init
