--- a/Dockerfile.tower
+++ b/Dockerfile.tower
@@ -2,11 +2,6 @@
 
 ARG IMAGE
 
-FROM ${IMAGE} AS yaegi
-ARG YAEGI
-RUN cd /usr/local/bin && curl -sSL https://github.com/traefik/yaegi/releases/download/v${YAEGI}/yaegi_v${YAEGI}_linux_amd64.tar.gz \
-    | sudo tar xvfz - yaegi
-
 FROM ${IMAGE} AS credential_pass
 ARG CREDENTIAL_PASS
 RUN cd /usr/local/bin && curl -sSL https://github.com/docker/docker-credential-helpers/releases/download/v${CREDENTIAL_PASS}/docker-credential-pass-v${CREDENTIAL_PASS}-amd64.tar.gz \
@@ -92,6 +87,16 @@ ARG FLYCTL
 RUN cd /usr/local/bin && curl -sSL https://github.com/superfly/flyctl/releases/download/v${FLYCTL}/flyctl_${FLYCTL}_Linux_x86_64.tar.gz \
     | sudo tar xvfz -
 
+FROM ${IMAGE} AS yaegi
+ARG YAEGI
+RUN cd /usr/local/bin && curl -sSL https://github.com/traefik/yaegi/releases/download/v${YAEGI}/yaegi_v${YAEGI}_linux_amd64.tar.gz \
+    | sudo tar xvfz - yaegi
+
+FROM ${IMAGE} AS dagger
+ARG DAGGER
+RUN cd /usr/local/bin && curl -sSL https://github.com/dagger/dagger/releases/download/v${DAGGER}/dagger_v${DAGGER}_linux_amd64.tar.gz \
+    | sudo tar xvfz -
+
 FROM ${IMAGE} as pants
 RUN python3.9 -m pipx install pantsbuild.pants
 
@@ -149,6 +154,7 @@ COPY --from=goreleaser --link /usr/local/bin/goreleaser /usr/local/bin/gorelease
 COPY --from=golangcilint --link /usr/local/bin/golangci-lint /usr/local/bin/golangci-lint
 COPY --from=flyctl --link /usr/local/bin/flyctl /usr/local/bin/flyctl
 COPY --from=yaegi --link /usr/local/bin/yaegi /usr/local/bin/yaegi
+COPY --from=dagger --link /usr/local/bin/dagger /usr/local/bin/dagger
 
 COPY --from=pants --link /home/ubuntu/.local/pipx/venvs/pantsbuild-pants /home/ubuntu/.local/pipx/venvs/pantsbuild-pants
 COPY --from=pants --link /home/ubuntu/.local/bin/pants /home/ubuntu/.local/bin/pants
