--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -37,6 +37,8 @@ RUN usermod --groups docker --append ubuntu
 RUN echo '%ubuntu ALL=(ALL:ALL) NOPASSWD: ALL' > /etc/sudoers.d/ubuntu
 RUN install -d -m 0700 -o ubuntu -g ubuntu /home/ubuntu
 
+COPY --link etc/daemon.json /etc/docker/daemon.json
+
 ARG APT
 RUN echo ${APT} && apt update && apt upgrade -y
 RUN ln -sf /usr/share/zoneinfo/UTC /etc/localtime \
