--- a/Makefile.site
+++ b/Makefile.site
@@ -1,5 +1,9 @@
 test:
-	cd "$(shell pwd -P)" && cirrus run --container-lazy-pull --output simple
+	cd "$(shell pwd -P)" && if ! cirrus run --container-lazy-pull --output simple; then figlet failed | /usr/games/lolcat; false; fi
+	rm -f .test
+	git push
+	@figlet success | /usr/games/lolcat
+
 
 asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
