install buildkite-agent

--- a/Dockerfile.tower
+++ b/Dockerfile.tower
@@ -92,6 +92,11 @@ ARG EARTHLY
 RUN cd /usr/local/bin && sudo curl -sSL -o earthly https://github.com/earthly/earthly/releases/download/v${EARTHLY}/earthly-linux-amd64 \
     && sudo chmod 755 earthly
 
+FROM ${IMAGE} AS buildkite
+ARG BUILDKIT
+RUN cd /usr/local/bin && curl -sSL https://github.com/buildkite/agent/releases/download/v3.35.2/buildkite-agent-linux-amd64-3.35.2.tar.gz \
+    && sudo tar xvfz - buildkite-agent
+
 FROM ${IMAGE} as pants
 RUN python3.9 -m pipx install pantsbuild.pants
 
@@ -157,6 +162,7 @@ COPY --from=golangcilint --link /usr/local/bin/golangci-lint /usr/local/bin/gola
 COPY --from=flyctl --link /usr/local/bin/flyctl /usr/local/bin/flyctl
 COPY --from=yaegi --link /usr/local/bin/yaegi /usr/local/bin/yaegi
 COPY --from=earthly --link /usr/local/bin/earthly /usr/local/bin/earthly
+COPY --from=buildkite --link /usr/local/bin/buildkite-agent /usr/local/bin/buildkite-agent
 
 COPY --from=pants --link /home/ubuntu/.local/pipx/venvs/pantsbuild-pants /home/ubuntu/.local/pipx/venvs/pantsbuild-pants
 COPY --from=pants --link /home/ubuntu/.local/bin/pants /home/ubuntu/.local/bin/pants
